# pytest-gen

./: .coverage  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
pytestgen/: __init__.py  function_discovery.py  test_generator.py
tests/: test_cli.py  test_function_discovery.py  test_test_generator.py
